--- a/front-end/main.css
+++ b/front-end/main.css
@@ -1,22 +1,27 @@
+.left-half{
+  max-width: 50%;
+}
+
 #file-upload{
   text-align: center;
   color: white;
 }
 
-/* .outer {
-  display: flex;
-  align-items: center; 
-  justify-content: center;
+#polidecklogowhite{
+  margin: auto;
+  margin-left: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-right: 5%;
+  max-width: 80%;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
-/* .outer {
-  display: flex;
-  align-items: center; 
-  justify-content: center;
-} */
+body {
+  background: linear-gradient(
+    to right, 
+    #0B5345 0%, 
+    #0B5345 50%, 
+    #f5f5f5 50%, 
+    #f5f5f5 100%
+  );
+}
